test/expected/declare_uwt.out
declare x as unsigned wchar_t
        ^
9: error: "unsigned wchar_t" is illegal for built-in type
